--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/companyManagement
 spring.datasource.username=root
-spring.datasource.password=PrajaktaDeokule123@
+spring.datasource.password=Vsks@843591
 
 spring.jpa.hibernate.ddl-auto=update
 
